test/Harper/Tests/Good/issue019_lambdaSE.har
main :: sideeffect -> ();
main = {
  (f :: Integer -> sideeffect -> Integer) = (\(x :: Integer) => {
      eval printLn "In lambda." ();
      return (\(n :: Integer) => n * x);
      }) 42 ();

  eval printLn (f 10 ()) ();
};