test/Harper/Tests/Bad/issue019_lambdaSE2.har
main :: sideeffect -> ();
main = {
  (f :: Integer -> Integer) = (\(x :: Integer) => {
      eval printLn (f 10) ();
      return (\(n :: Integer) => n * x);
      }) 42 ();

  eval printLn (f 10) ();
};